Fix some alignment bugs observed in chrome and improve some texts

--- a/src/app/sites/projects/projects.component.scss
+++ b/src/app/sites/projects/projects.component.scss
@@ -22,6 +22,7 @@
 }
 
 .project-image {
+    min-width: 0; // Fix chrome bug that was overflowing images
     width: 100%;
     max-height: 50vh;
     object-fit: contain;
