--- a/src/styles/texts.scss
+++ b/src/styles/texts.scss
@@ -5,6 +5,10 @@
     margin-bottom: 0;
 }
 
+.title-centered {
+    text-align: center;
+}
+
 .text-body {
     font-size: clamp(1.2rem, 5vw, 1rem);
     margin-bottom: 1rem;
